# bcfl-optimizer

./: .gitignore  CITATION.cff  README.md  pyproject.toml
bcfl/: __init__.py  consensus.py  devices.py  flower.py  miners.py  optimizer.py
examples/: flower_simulation.py  paper_reproduction.py  pytorch_verification.py  quickstart.py
tests/: test_devices.py  test_optimizer.py
