[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcfl-optimizer"
version = "0.1.1"
description = "Energy-efficient and latency-aware device selection for Blockchain-Enabled Federated Learning."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Vinay"},
]
keywords = ["federated-learning", "blockchain", "edge-computing", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
csv = ["pandas>=1.3"]
plot = ["matplotlib>=3.4"]
flower = ["flwr>=1.0"]
all = ["pandas>=1.3", "matplotlib>=3.4", "flwr>=1.0"]

[project.urls]
Repository = "https://github.com/your-username/bcfl-optimizer"
Paper = "https://doi.org/10.1109/TCSII.2023.3322340"

[tool.setuptools.packages.find]
include = ["bcfl*"]
